# plug-and-plant-be-axum-sqlx

./: .env.example  .gitignore  Cargo.toml  load_test.sh  review.md
aop_macro/: Cargo.toml
aop_macro/src/: lib.rs
logs/: application.log.2025-07-07
migrations/: 20250731133157_create_table_accounts.up.sql  20250909164832_create_table_session.down.sql  20250909164832_create_table_session.up.sql
src/: config.rs  lib.rs  logging.rs  main.rs  middleware.rs  request_context.rs  request_utils.rs  response.rs
src/dal/: account.rs  session.rs
src/http/: context.rs  error.rs  middleware.rs  mod.rs  request_context.rs  scenario.rs
src/http/api/: account.rs  index.rs  mod.rs  safe_json.rs
src/http/request/: account.rs  mod.rs  safe_json.rs
src/http/result/: account.rs  app_result.rs  mod.rs
src/http/utils/: error.rs  mod.rs  scenario.rs  validator.rs
src/services/: account_service.rs  mod.rs
src/services/handler/: account.rs
src/services/model/: account.rs
src/services/utils/: error.rs
