[package]
name = "plug-and-plant-be-axum-sqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { version = "1.46.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
